Updated ReadMe and z-index issues on index.html

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -65,3 +65,7 @@ main {
 #info-card{
     z-index: -1;
 }
+
+.project-card {
+    z-index: -1;
+}
